--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>LOOK AT THE CONSOLE</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -14,14 +14,13 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5">Rigo first words:</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
+        "LOOK AT THE CONSOLE! ON APP2.JS "
       </p>
       <div class="fixed-bottom p-4">
-        Made with ❤️ by
+        Made with 🥵 by MJ
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
     </div>
