--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Rigo first words:</h1>
+      <h1 class="mt-5">Rigo's first words:</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         "LOOK AT THE CONSOLE! ON APP2.JS "
